--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,10 @@
       </ul>
     </nav>
 
-    <div id="app"></div>
+    <div id="app">
+      <a href="download-img"
+        ><img src="/images/IMG_1557.JPG" alt="dog-image" style="width: 200px"
+      /></a>
+    </div>
   </body>
 </html>
